# fancontrol-gui

./: CMakeLists.txt
fancontrol-gui/: CMakeLists.txt
helper/: CMakeLists.txt
helper/src/: helper.h
import/: CMakeLists.txt
